--- a/data/styles.qss
+++ b/data/styles.qss
@@ -142,7 +142,7 @@
 #InputWrapper::title{
     padding: 0 3px;
     subcontrol-origin: margin;
-    left: 20px;
+    left: 10px;
     font-size: 16px;
 }
 
@@ -285,4 +285,14 @@ QScrollBar::up-arrow:vertical, QScrollBar::down-arrow:vertical {
 }
 QScrollBar::add-page:vertical, QScrollBar::sub-page:vertical {
     background: none;
+}
+
+QToolBar {
+    spacing: 3px; /* spacing between items in the tool bar */
+    font-size: 20px;
+    padding-top: 10px;
+}
+
+QMainWindow {
+    padding: 30px 30px 30px 30px;
 }
